- localstorage storing regions issue fixed. - cards updating issue fixed. - mobile collapse menu fixed.

--- a/src/components/header-component/header.css
+++ b/src/components/header-component/header.css
@@ -222,7 +222,7 @@ li:active{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 11px;
     border: none;
-    margin-bottom: 5%;
+    margin: 5%;
     float: right;
 }
 .closeBtn:active{
